--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                                                     The evaluation experiments have been done on 2 systems of different configurations considering 2 different datasets.
                                                     <li><a href="https://www.kaggle.com/datasets/arnavsmayan/netflix-userbase-dataset">Netflix Userbase dataset</a></li>
                                                     <li><a href="https://www.kaggle.com/datasets/uciml/sms-spam-collection-dataset">SMS Spam dataset</a></li>
-
-                                                    
+                                                    <p><strong>Results for selecting all rows of Netflix Userbase dataset</strong></p>
+                                                    <img class="img-fluid" src="assets/images/demo/DBJoules_Output.png" alt="elegant icons" />
                                                 </div>
                                                 
                                             </section>
@@ -195,7 +195,6 @@
                                                                 <!-- <iframe width="729" height="410" src="https://www.youtube.com/embed/eLcOIPiGt_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                                                 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/GNrJfZ0RCVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                                             </div>
-                                                            <div>The output file name has been updated as RJoules_output.csv</div>
                                                         </div>
                                                     </div>
                                                 </div>
