--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                                         <p>
                                                             <ul>
                                                                 <li>Windows Operating System</li>
-                                                                <li>Have <a href="https://dev.mysql.com/downloads/installer/">MySQL</a>, <a href="https://www.postgresql.org/download/">PostgreSQL</a>, <a href="https://www.mongodb.com/try/download/community">MongoDB</a>, <a href="https://www.couchbase.com/downloads/?family=couchbase-server">Couchbase</a> installed in your system.</li>
+                                                                <li>Have <a href="https://www.python.org/downloads/">Python</a>, <a href="https://dev.mysql.com/downloads/installer/">MySQL</a>, <a href="https://www.postgresql.org/download/">PostgreSQL</a>, <a href="https://www.mongodb.com/try/download/community">MongoDB</a>, <a href="https://www.couchbase.com/downloads/?family=couchbase-server">Couchbase</a> installed in your system.</li>
                                                                 <li>It is recommended to download couchbase-server of version 7.0.2</li>
                                                             </ul>
                                                         </p>
@@ -177,7 +177,7 @@
                                                     The evaluation experiments have been done on 2 systems of different configurations considering 2 different datasets.
                                                     <li><a href="https://www.kaggle.com/datasets/arnavsmayan/netflix-userbase-dataset">Netflix Userbase dataset</a></li>
                                                     <li><a href="https://www.kaggle.com/datasets/uciml/sms-spam-collection-dataset">SMS Spam dataset</a></li>
-                                                    <p><strong>Results for selecting all rows of Netflix Userbase dataset</strong></p>
+                                                    <p><strong>Following are the results for executing select query in all 4 databases using Netflix Userbase dataset</strong></p>
                                                     <img class="img-fluid" src="assets/images/demo/DBJoules_Output.png" alt="elegant icons" />
                                                 </div>
                                                 
