--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@
                                                     </div>
                                                 </div>
                                             </section>
+
+                                            <section id="note-section" class="doc-section">
+                                                <h2>Note </h2>
+                                                <ul>
+                                                    <li>The document in MongoDB query should be in JSON format</li>
+                                                    <li>Internet should be connected while running the tool</li>
+                                                </ul>
+                                            </section>
                                         </div><!--//content-inner-->
                                     </div><!--//doc-content-->
                                     <div class="doc-sidebar col-md-3 col-12 order-0 d-none d-md-flex">
